# prover/docs/swagger.yaml
@@ -81,7 +81,7 @@ paths:
       - Batches
   /batches/{id}:
     get:
-      description: Get details of a specific batch
+      description: Get details of a specific batch from local storage
       parameters:
       - description: Batch ID
         in: path
@@ -97,6 +97,10 @@ paths:
             $ref: '#/definitions/internal_api.BatchResponse'
         "400":
           description: Invalid batch ID
+          schema:
+            type: string
+        "404":
+          description: Batch not found
           schema:
             type: string
         "500":
